--- a/framesdirect_demo.ipynb
+++ b/framesdirect_demo.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "2ac56da5",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "6ed704ce",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "id": "065e915c",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "b9f9345e",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "62d6acfc",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "9ff021ec",
    "metadata": {},
    "outputs": [
@@ -168,9 +168,9 @@
     "        # For Price\n",
     "        price_cnt = holder.find('div', class_='prod-price-wrap')\n",
     "        if price_cnt:\n",
-    "            # Original Price\n",
-    "            orig_price_tag = price_cnt.find('div', class_='prod-aslowas')\n",
-    "            original_price = orig_price_tag.text.strip() if orig_price_tag else \"N/A\"\n",
+    "            # Current Price\n",
+    "            current_price_tag = price_cnt.find('div', class_='prod-aslowas')\n",
+    "            current_price = current_price_tag.text.strip() if current_price_tag else \"N/A\"\n",
     "\n",
     "            # Former Price\n",
     "            former_price_tag = price_cnt.find('div', class_='prod-catalog-retail-price')\n",
@@ -189,7 +189,7 @@
     "    data = {\n",
     "            \"brand\": brand,\n",
     "            \"name\": name,\n",
-    "            \"original_price\": original_price,\n",
+    "            \"current_price\": current_price,\n",
     "            \"former_price\": former_price,\n",
     "            \"discount\": discount\n",
     "    }\n",
